proper methods swagger info
